# hifs-pyqt

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: cicd.yml
test/: vtk1.py  vtk2.py
